# GameSpeedController

./: .gitignore  README.md  build.ps1
HookDLL/: CMakeLists.txt
HookDLL/MinHook/: CMakeLists.txt  MinHook.cpp  MinHook.h
HookDLL/src/: HookFunctions.cpp  HookFunctions.h  HookMain.cpp  IPC.cpp  IPC.h  TimeController.cpp  TimeController.h
Launcher/: HotkeyManager.cs  Injector.cs  Launcher.csproj  MainWindow.xaml  MainWindow.xaml.cs  PipeServer.cs  build.ps1
Launcher.Tests/: InjectorTests.cs  Launcher.Tests.csproj
ManualMapBridge/: ManualMapBridge.cpp  ManualMapBridge.h  ManualMapBridge.vcxproj  ManualMapNative.cpp  ManualMapNative.h
